--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   path_provider: ^2.1.1
+  camera: ^0.10.5+7
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
