--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.8
+  flutter_blue: ^0.8.0
 
 
   # The following adds the Cupertino Icons font to your application.
