--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.0.5
   permission_handler: ^11.1.0
   get: ^4.3.8
+  flutter_blue_plus: ^1.31.3
 
 dev_dependencies:
   flutter_test:
